--- a/src/sass/components/_modal-windows.scss
+++ b/src/sass/components/_modal-windows.scss
@@ -1,7 +1,11 @@
 
+.active-modal {
+    overflow-y: hidden;
+}
+
 .backdrop {
     position: fixed;
-    z-index: 100;
+    z-index: 9999;
     top: 0;
     left: 0;
     width: 100%;
@@ -25,10 +29,12 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 280px;
-        height: auto;
         background-color: #ffffff;
         border-radius: 10px;
         padding: 28px 28px;
+        height: auto;
+        max-height: 80vh;
+        overflow-y: scroll;
 
     }
 
@@ -115,10 +121,12 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 568px;
-        height: auto;
         background-color: #ffffff;
         border-radius: 10px;
         padding: 32px 60px; 
+        height: auto;
+        max-height: 80vh;
+        overflow-y: scroll;
     }
 
 
